# ssl_pydev

./: .gitignore  .semgrep.yml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/ssl_py_platform/: cli.py
src/ssl_py_platform/scripts/: setup-env.sh  validate_docs.sh
src/ssl_pydev/: __init__.py  cli.py  prune.py
src/ssl_pydev/scripts/: act.sh  build.sh  build_native.sh  generate_stubs.sh  new.sh  new_sim.sh  publish.sh  publish_ci.sh  security.sh  semgrep-rules.yml  setup-env.sh  validate_docs.sh
tests/: test_cli.py  test_packaging.py
